--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -2,8 +2,8 @@
 @import "variables.scss";
 @import "mixins.scss";
 @import "fonts.scss";
-@import "~bootstrap/scss/bootstrap.scss";
-@import "blocks/page-header.scss";
-@import "blocks/logo.scss";
-@import "blocks/menu.scss";
-@import "blocks/sample.scss";
+//@import "/bootstrap/scss/bootstrap.scss";
+@import "blocks/_page-header.scss";
+@import "blocks/_logo.scss";
+@import "blocks/_menu.scss";
+@import "blocks/_sample.scss";
