--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,6 +1,3 @@
-.card {
-  color: #0b2e13; }
-
 @font-face {
   font-family: "Roboto", sans-serif;
   src: local("Roboto Regular"), url("/source/fonts/Roboto/Roboto-Regular.ttf") format(".ttf");
@@ -54,3 +51,16 @@
   src: local("Raleway Extra-Bold"), url("/source/fonts/Raleway/Raleway-ExtraBold.ttf") format(".ttf");
   font-weight: 800;
   font-style: normal; }
+
+.page-header {
+  background-image: url("images/header-bg.jpg"); }
+
+.logo__img {
+  width: 64px;
+  height: 56px; }
+
+.logo__trademark {
+  width: 115px;
+  height: 26px;
+  font-size: 34px;
+  font-weight: 400; }
