--- a/source/Sass/blocks/_logo.scss
+++ b/source/Sass/blocks/_logo.scss
@@ -1,16 +1,17 @@
 .logo {
   display: flex;
   flex-direction: row;
-  padding-top: 38px;
-  padding-left: 296px;
+  position: absolute;
+  left: 374px;
+  top: 38px;
   &__img {
     width: 64px;
     height: 56px;
   }
-  &__trademark {
-    display: block;
+  &__trademark-link {
     width: 115px;
     height: 50px;
+    color: white;
     font-family: Raleway;
     font-size: 34px;
     font-weight: 400;
