--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -2,6 +2,7 @@
 @import "variables.scss";
 @import "mixins.scss";
 @import "fonts.scss";
+@import "bootstrap-override";
 @import "./bootstrap/scss/bootstrap.scss";
 @import "blocks/page-header.scss";
 @import "blocks/logo.scss";
