--- a/source/Sass/_fonts.scss
+++ b/source/Sass/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "Roboto", sans-serif;
     src: local("Roboto Regular"),
-    url("/source/fonts/Roboto/Roboto-Regular.ttf") format(".ttf");
+    url("../fonts/Roboto-Regular.ttf") format(".ttf");
     font-weight: 400;
     font-style: normal;
 }
@@ -9,7 +9,7 @@
 @font-face {
     font-family: "Montserrat", sans-serif;
     src: local("Montserrat Light"),
-    url("/source/fonts/Montserrat/Montserrat-Light.ttf") format(".ttf");
+    url("../fonts/Montserrat/Montserrat-Light.ttf") format(".ttf");
     font-weight: 300;
     font-style: normal;
 }
@@ -17,7 +17,7 @@
 @font-face {
     font-family: "Montserrat", sans-serif;
     src: local("Montserrat Regular"),
-    url("/source/fonts/Montserrat/Montserrat-Regular.ttf") format(".ttf");
+    url("../fonts/Montserrat/Montserrat-Regular.ttf") format(".ttf");
     font-weight: 400;
     font-style: normal;
 }
@@ -25,15 +25,15 @@
 @font-face {
     font-family: "Montserrat", sans-serif;
     src: local("Montserrat Extra-Light"),
-    url("/source/fonts/Montserrat/Montserrat-ExtraLight.ttf") format(".ttf");
+    url("../fonts/Montserrat/Montserrat-ExtraLight.ttf") format(".ttf");
     font-weight: 200;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Raleway", sans-serif;
-    src: local("Raleway Regular"),
-    url("/source/fonts/Raleway/Raleway-Regular.ttf") format(".ttf");
+    src: local("Raleway-Regular"),
+    url("/HTML5-JQuery-landing-demo/source/fonts/Raleway-Regular.ttf") format("ttf");
     font-weight: 400;
     font-style: normal;
 }
@@ -41,7 +41,7 @@
 @font-face {
     font-family: "Raleway", sans-serif;
     src: local("Raleway Medium"),
-    url("/source/fonts/Raleway/Raleway-Medium.ttf") format(".ttf");
+    url("../fonts/Raleway-Medium.ttf") format(".ttf");
     font-weight: 500;
     font-style: normal;
 }
@@ -49,7 +49,7 @@
 @font-face {
     font-family: "Raleway", sans-serif;
     src: local("Raleway Semi-Bold"),
-    url("/source/fonts/Raleway/Raleway-SemiBold.ttf") format(".ttf");
+    url("../fonts/Raleway-SemiBold.ttf") format(".ttf");
     font-weight: 600;
     font-style: normal;
 }
@@ -57,7 +57,7 @@
 @font-face {
     font-family: "Raleway", sans-serif;
     src: local("Raleway Bold"),
-    url("/source/fonts/Raleway/Raleway-Bold.ttf") format(".ttf");
+    url("../fonts/Raleway-Bold.ttf") format(".ttf");
     font-weight: 700;
     font-style: normal;
 }
@@ -65,7 +65,7 @@
 @font-face {
     font-family: "Raleway", sans-serif;
     src: local("Raleway Extra-Bold"),
-    url("/source/fonts/Raleway/Raleway-ExtraBold.ttf") format(".ttf");
+    url("../fonts/Raleway-ExtraBold.ttf") format(".ttf");
     font-weight: 800;
     font-style: normal;
 }
