--- a/source/Sass/blocks/_logo.scss
+++ b/source/Sass/blocks/_logo.scss
@@ -12,7 +12,7 @@
     width: 115px;
     height: 50px;
     color: white;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 34px;
     font-weight: 400;
     letter-spacing: -1.36px;
