--- a/source/css/style.css
+++ b/source/css/style.css
@@ -4,55 +4,55 @@ a {
 
 @font-face {
   font-family: "Roboto", sans-serif;
-  src: local("Roboto Regular"), url("source/fonts/Roboto/Roboto-Regular.ttf") format(".ttf");
+  src: local("Roboto Regular"), url("../fonts/Roboto-Regular.ttf") format(".ttf");
   font-weight: 400;
   font-style: normal; }
 
 @font-face {
   font-family: "Montserrat", sans-serif;
-  src: local("Montserrat Light"), url("source/fonts/Montserrat/Montserrat-Light.ttf") format(".ttf");
+  src: local("Montserrat Light"), url("../fonts/Montserrat/Montserrat-Light.ttf") format(".ttf");
   font-weight: 300;
   font-style: normal; }
 
 @font-face {
   font-family: "Montserrat", sans-serif;
-  src: local("Montserrat Regular"), url("source/fonts/Montserrat/Montserrat-Regular.ttf") format(".ttf");
+  src: local("Montserrat Regular"), url("../fonts/Montserrat/Montserrat-Regular.ttf") format(".ttf");
   font-weight: 400;
   font-style: normal; }
 
 @font-face {
   font-family: "Montserrat", sans-serif;
-  src: local("Montserrat Extra-Light"), url("source/fonts/Montserrat/Montserrat-ExtraLight.ttf") format(".ttf");
+  src: local("Montserrat Extra-Light"), url("../fonts/Montserrat/Montserrat-ExtraLight.ttf") format(".ttf");
   font-weight: 200;
   font-style: normal; }
 
 @font-face {
   font-family: "Raleway", sans-serif;
-  src: local("Raleway Regular"), url("source/fonts/Raleway/Raleway-Regular.ttf") format(".ttf");
+  src: local("Raleway-Regular"), url("/HTML5-JQuery-landing-demo/source/fonts/Raleway-Regular.ttf") format("ttf");
   font-weight: 400;
   font-style: normal; }
 
 @font-face {
   font-family: "Raleway", sans-serif;
-  src: local("Raleway Medium"), url("source/fonts/Raleway/Raleway-Medium.ttf") format(".ttf");
+  src: local("Raleway Medium"), url("../fonts/Raleway-Medium.ttf") format(".ttf");
   font-weight: 500;
   font-style: normal; }
 
 @font-face {
   font-family: "Raleway", sans-serif;
-  src: local("Raleway Semi-Bold"), url("source/fonts/Raleway/Raleway-SemiBold.ttf") format(".ttf");
+  src: local("Raleway Semi-Bold"), url("../fonts/Raleway-SemiBold.ttf") format(".ttf");
   font-weight: 600;
   font-style: normal; }
 
 @font-face {
   font-family: "Raleway", sans-serif;
-  src: local("Raleway Bold"), url("source/fonts/Raleway/Raleway-Bold.ttf") format(".ttf");
+  src: local("Raleway Bold"), url("../fonts/Raleway-Bold.ttf") format(".ttf");
   font-weight: 700;
   font-style: normal; }
 
 @font-face {
   font-family: "Raleway", sans-serif;
-  src: local("Raleway Extra-Bold"), url("source/fonts/Raleway/Raleway-ExtraBold.ttf") format(".ttf");
+  src: local("Raleway Extra-Bold"), url("../fonts/Raleway-ExtraBold.ttf") format(".ttf");
   font-weight: 800;
   font-style: normal; }
 
@@ -6394,7 +6394,7 @@ a.text-dark:hover, a.text-dark:focus {
     width: 115px;
     height: 50px;
     color: white;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 34px;
     font-weight: 400;
     letter-spacing: -1.36px; }
@@ -6426,3 +6426,16 @@ a.text-dark:hover, a.text-dark:focus {
   background-color: #1c7430;
   padding-top: 260px;
   color: #ffffff; }
+  .sample__title {
+    font-family: Raleway;
+    font-size: 36px;
+    font-weight: 500; }
+  .sample__tagline {
+    font-family: "Raleway - Extra Bold";
+    font-size: 52px;
+    font-weight: 700; }
+  .sample__text {
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.5; }
