--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -1,7 +1,7 @@
 @import "scaffoldings.scss";
 @import "variables.scss";
 @import "mixins.scss";
-@import "fonts.scss";
+//@import "fonts.scss";
 @import "bootstrap-override";
 @import "./bootstrap/scss/bootstrap.scss";
 @import "blocks/page-header.scss";
