--- a/source/Sass/blocks/_page-header.scss
+++ b/source/Sass/blocks/_page-header.scss
@@ -2,4 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  background-color: rgba(17, 17, 17, 0.7);
+  z-index: 2;
+  height: 100vh;
+  width: 100vw;
 }
