--- a/source/Sass/blocks/_sample.scss
+++ b/source/Sass/blocks/_sample.scss
@@ -1,7 +1,17 @@
 .sample {
-  background-color: #1c7430;
-  padding-top: 260px;
+  background-color: rgba(17, 17, 17, 0.7);
   color: $white;
+  position: relative;
+  z-index: 2;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    position: absolute;
+    top: 380px;
+  }
   &__title {
     font-family: Raleway;
     font-size: 36px;
