--- a/source/css/style.css
+++ b/source/css/style.css
@@ -6,7 +6,8 @@ a {
   position: relative;
   max-width: 1230px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  overflow: hidden; }
 
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
@@ -6325,7 +6326,11 @@ a.text-dark:hover, a.text-dark:focus {
 .page-header {
   display: flex;
   flex-direction: row;
-  justify-content: space-around; }
+  justify-content: space-around;
+  background-color: rgba(17, 17, 17, 0.7);
+  z-index: 2;
+  height: 100vh;
+  width: 100vw; }
 
 .logo {
   display: flex;
@@ -6375,9 +6380,18 @@ a.text-dark:hover, a.text-dark:focus {
       font-weight: 300; }
 
 .sample {
-  background-color: #1c7430;
-  padding-top: 260px;
-  color: #ffffff; }
+  background-color: rgba(17, 17, 17, 0.7);
+  color: #ffffff;
+  position: relative;
+  z-index: 2; }
+  .sample__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    position: absolute;
+    top: 380px; }
   .sample__title {
     font-family: Raleway;
     font-size: 36px;
