--- a/source/Sass/blocks/_page-header.scss
+++ b/source/Sass/blocks/_page-header.scss
@@ -1,9 +1,10 @@
 .page-header {
+  position: absolute;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   background-color: rgba(17, 17, 17, 0.7);
   z-index: 2;
-  height: 100vh;
+  height: 1024px;
   width: 100vw;
 }
