--- a/source/css/style.css
+++ b/source/css/style.css
@@ -6324,12 +6324,13 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 .page-header {
+  position: absolute;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   background-color: rgba(17, 17, 17, 0.7);
   z-index: 2;
-  height: 100vh;
+  height: 1024px;
   width: 100vw; }
 
 .logo {
@@ -6380,18 +6381,13 @@ a.text-dark:hover, a.text-dark:focus {
       font-weight: 300; }
 
 .sample {
-  background-color: rgba(17, 17, 17, 0.7);
-  color: #ffffff;
-  position: relative;
-  z-index: 2; }
+  color: #ffffff; }
   .sample__wrapper {
     display: flex;
     flex-direction: column;
     align-content: center;
     margin-right: auto;
-    margin-left: auto;
-    position: absolute;
-    top: 380px; }
+    margin-left: auto; }
   .sample__title {
     font-family: Raleway;
     font-size: 36px;
