--- a/source/Sass/blocks/_sample.scss
+++ b/source/Sass/blocks/_sample.scss
@@ -1,12 +1,15 @@
 .sample {
+  position: absolute;
+  top: 50%;
+  left: 23%;
+  max-width: 1230px;
   color: $white;
-  &__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    margin-right: auto;
-    margin-left: auto;
-  }
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-right: auto;
+  margin-left: auto;
+  z-index: 5;
   &__title {
     font-family: Raleway;
     font-size: 36px;
@@ -22,5 +25,17 @@
     font-size: 16px;
     font-weight: 300;
     line-height: 1.5;
+  }
+  &__button-link {
+    box-shadow: inset 0 -3px 0 #736357;
+    border-radius: 3px;
+    background-color: #998675;
+    color: $white;
+    font-family: "Raleway - Extra Bold";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.64;
+    text-transform: uppercase;
+    cursor: pointer;
   }
 }
