--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -8,4 +8,4 @@
 @import "blocks/logo.scss";
 @import "blocks/menu.scss";
 @import "blocks/sample.scss";
-// @import "blocks/carousel.scss";
+ @import "blocks/carousel.scss";
