--- a/source/carousel/slick/slick.css
+++ b/source/carousel/slick/slick.css
@@ -89,6 +89,9 @@
 .slick-slide img
 {
     display: block;
+    filter: brightness(40%);
+  width: 100%;
+  height: 1024px;
 }
 .slick-slide.slick-loading img
 {
