--- a/source/css/style.css
+++ b/source/css/style.css
@@ -9,6 +9,10 @@ a {
   margin-right: auto;
   overflow: hidden; }
 
+.carousel-item {
+  position: relative;
+  width: 100%; }
+
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
@@ -6328,7 +6332,6 @@ a.text-dark:hover, a.text-dark:focus {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  background-color: rgba(17, 17, 17, 0.7);
   z-index: 2;
   height: 1024px;
   width: 100vw; }
@@ -6381,13 +6384,17 @@ a.text-dark:hover, a.text-dark:focus {
       font-weight: 300; }
 
 .sample {
-  color: #ffffff; }
-  .sample__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    margin-right: auto;
-    margin-left: auto; }
+  position: absolute;
+  top: 50%;
+  left: 23%;
+  max-width: 1230px;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-right: auto;
+  margin-left: auto;
+  z-index: 5; }
   .sample__title {
     font-family: Raleway;
     font-size: 36px;
@@ -6401,3 +6408,17 @@ a.text-dark:hover, a.text-dark:focus {
     font-size: 16px;
     font-weight: 300;
     line-height: 1.5; }
+  .sample__button-link {
+    box-shadow: inset 0 -3px 0 #736357;
+    border-radius: 3px;
+    background-color: #998675;
+    color: #ffffff;
+    font-family: "Raleway - Extra Bold";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.64;
+    text-transform: uppercase;
+    cursor: pointer; }
+
+.carousel {
+  max-width: 1950px; }
