--- a/source/css/style.css
+++ b/source/css/style.css
@@ -9,6 +9,9 @@ a {
   margin-right: auto;
   overflow: hidden; }
 
+.carousel {
+  max-width: 1920px; }
+
 .carousel-item {
   position: relative;
   width: 100%; }
@@ -6420,5 +6423,29 @@ a.text-dark:hover, a.text-dark:focus {
     text-transform: uppercase;
     cursor: pointer; }
 
-.carousel {
-  max-width: 1950px; }
+.arrow-prev {
+  width: 40px;
+  height: 73px;
+  cursor: pointer;
+  position: absolute;
+  top: 58%;
+  left: 6%;
+  z-index: 2;
+  fill: #ffffff;
+  opacity: 0.5; }
+  .arrow-prev:hover {
+    fill: #d3c1ad; }
+
+.arrow-next {
+  width: 40px;
+  height: 73px;
+  cursor: pointer;
+  position: absolute;
+  top: 58%;
+  right: 6%;
+  left: auto;
+  z-index: 2;
+  fill: #ffffff;
+  opacity: 0.5; }
+  .arrow-next:hover {
+    fill: #d3c1ad; }
