--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2,6 +2,9 @@ a {
   text-decoration: none;
   color: white; }
 
+body {
+  overflow-x: hidden; }
+
 .container-fluid {
   position: relative;
   max-width: 1230px;
@@ -6421,6 +6424,10 @@ a.text-dark:hover, a.text-dark:focus {
     font-weight: 400;
     line-height: 1.64;
     text-transform: uppercase;
+    padding-top: 21px;
+    padding-bottom: 21px;
+    padding-right: 38px;
+    padding-left: 38px;
     cursor: pointer; }
 
 .arrow-prev {
