--- a/source/Sass/blocks/_sample.scss
+++ b/source/Sass/blocks/_sample.scss
@@ -1,7 +1,5 @@
 .sample {
   position: absolute;
-  top: 50%;
-  left: 23%;
   max-width: 1230px;
   color: $white;
   display: flex;
@@ -36,6 +34,8 @@
     font-weight: 400;
     line-height: 1.64;
     text-transform: uppercase;
+    padding: 21px 38px;
     cursor: pointer;
+    pointer-events: auto;
   }
 }
