--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1621,6 +1621,7 @@ textarea.form-control {
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
+  cursor: pointer;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
@@ -6391,8 +6392,6 @@ a.text-dark:hover, a.text-dark:focus {
 
 .sample {
   position: absolute;
-  top: 50%;
-  left: 23%;
   max-width: 1230px;
   color: #ffffff;
   display: flex;
@@ -6424,18 +6423,16 @@ a.text-dark:hover, a.text-dark:focus {
     font-weight: 400;
     line-height: 1.64;
     text-transform: uppercase;
-    padding-top: 21px;
-    padding-bottom: 21px;
-    padding-right: 38px;
-    padding-left: 38px;
-    cursor: pointer; }
+    padding: 21px 38px;
+    cursor: pointer;
+    pointer-events: auto; }
 
 .arrow-prev {
   width: 40px;
   height: 73px;
   cursor: pointer;
   position: absolute;
-  top: 58%;
+  top: 50%;
   left: 6%;
   z-index: 2;
   fill: #ffffff;
@@ -6448,7 +6445,7 @@ a.text-dark:hover, a.text-dark:focus {
   height: 73px;
   cursor: pointer;
   position: absolute;
-  top: 58%;
+  top: 50%;
   right: 6%;
   left: auto;
   z-index: 2;
