cursor pointer was added for .sample__button-link

--- a/source/Sass/blocks/_sample.scss
+++ b/source/Sass/blocks/_sample.scss
@@ -36,6 +36,6 @@
     text-transform: uppercase;
     padding: 21px 38px;
     cursor: pointer;
-    pointer-events: auto;
+    text-decoration: none;
   }
 }
