--- a/source/css/style.css
+++ b/source/css/style.css
@@ -13,7 +13,8 @@ body {
   overflow: hidden; }
 
 .carousel {
-  max-width: 1920px; }
+  max-width: 1920px;
+  z-index: 5; }
 
 .carousel-item {
   position: relative;
@@ -1621,7 +1622,6 @@ textarea.form-control {
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
-  cursor: pointer;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
@@ -6425,7 +6425,7 @@ a.text-dark:hover, a.text-dark:focus {
     text-transform: uppercase;
     padding: 21px 38px;
     cursor: pointer;
-    pointer-events: auto; }
+    text-decoration: none; }
 
 .arrow-prev {
   width: 40px;
