button border was deleted, header height was modified, hover for slider dots was added

--- a/source/Sass/_header-slick-override.scss
+++ b/source/Sass/_header-slick-override.scss
@@ -14,6 +14,9 @@
   color: transparent;
   opacity: 0.5;
 }
+.slick-dots li button:hover::before {
+  background-color: $menu-link-hover;
+}
 
 .slick-dots li.slick-active button:before {
   width: 15px;
