--- a/source/css/style.css
+++ b/source/css/style.css
@@ -6339,8 +6339,8 @@ a.text-dark:hover, a.text-dark:focus {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  z-index: 2;
-  height: 1024px;
+  z-index: 10;
+  height: 140px;
   width: 100vw; }
 
 .logo {
@@ -6398,8 +6398,7 @@ a.text-dark:hover, a.text-dark:focus {
   flex-direction: column;
   align-content: center;
   margin-right: auto;
-  margin-left: auto;
-  z-index: 5; }
+  margin-left: auto; }
   .sample__title {
     font-family: Raleway;
     font-size: 36px;
@@ -6416,6 +6415,7 @@ a.text-dark:hover, a.text-dark:focus {
   .sample__button-link {
     box-shadow: inset 0 -3px 0 #736357;
     border-radius: 3px;
+    border: 0;
     background-color: #998675;
     color: #ffffff;
     font-family: "Raleway - Extra Bold";
@@ -6467,6 +6467,9 @@ a.text-dark:hover, a.text-dark:focus {
   background-color: #ffffff;
   color: transparent;
   opacity: 0.5; }
+
+.slick-dots li button:hover::before {
+  background-color: #c7b299; }
 
 .slick-dots li.slick-active button:before {
   width: 15px;
