--- a/source/css/style.css
+++ b/source/css/style.css
@@ -6392,7 +6392,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .sample {
   position: absolute;
-  max-width: 1230px;
+  max-width: 600px;
   color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -6404,7 +6404,7 @@ a.text-dark:hover, a.text-dark:focus {
     font-size: 36px;
     font-weight: 500; }
   .sample__tagline {
-    font-family: "Raleway - Extra Bold";
+    font-family: Raleway;
     font-size: 52px;
     font-weight: 700; }
   .sample__text {
@@ -6418,12 +6418,12 @@ a.text-dark:hover, a.text-dark:focus {
     border: 0;
     background-color: #998675;
     color: #ffffff;
-    font-family: "Raleway - Extra Bold";
+    font-family: Raleway;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.64;
     text-transform: uppercase;
-    padding: 21px 38px;
+    padding: 15px 38px;
     cursor: pointer;
     text-decoration: none; }
 
