container width was added to .projects block, projects.scss was imported to style.scss

--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -10,3 +10,4 @@
 @import "blocks/sample.scss";
 @import "blocks/arrow.scss";
 @import "header-slick-override.scss";
+@import "blocks/projects.scss";
