--- a/source/css/style.css
+++ b/source/css/style.css
@@ -6427,55 +6427,13 @@ a.text-dark:hover, a.text-dark:focus {
     cursor: pointer;
     text-decoration: none; }
 
-.arrow-prev {
-  width: 40px;
-  height: 73px;
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  left: 6%;
-  z-index: 2;
-  fill: #ffffff;
-  opacity: 0.5; }
-  .arrow-prev:hover {
-    fill: #d3c1ad; }
-
-.arrow-next {
-  width: 40px;
-  height: 73px;
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  right: 6%;
-  left: auto;
-  z-index: 2;
-  fill: #ffffff;
-  opacity: 0.5; }
-  .arrow-next:hover {
-    fill: #d3c1ad; }
-
-.slick-dots {
-  bottom: 25px; }
-
-.slick-dots li.slick-active button {
-  padding-bottom: 2px; }
-
-.slick-dots li button:before {
-  width: 11px;
-  height: 11px;
-  border-radius: 50%;
-  background-color: #ffffff;
-  color: transparent;
-  opacity: 0.5; }
-
-.slick-dots li button:hover::before {
-  background-color: #c7b299; }
-
-.slick-dots li.slick-active button:before {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  border: 2px solid #d3c1ad;
-  color: transparent;
-  background-color: transparent;
-  opacity: 1; }
+.category {
+  display: flex;
+  justify-content: center; }
+  .category__item {
+    border-radius: 3px;
+    border: 1px solid #ebebeb;
+    cursor: pointer; }
+    .category__item:hover {
+      border-radius: 3px;
+      background-color: #998675; }
