wrongly deleted blocks arrow.scss and header-slick-override.scss  were imported again

--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -8,5 +8,7 @@
 @import "blocks/logo.scss";
 @import "blocks/menu.scss";
 @import "blocks/sample.scss";
+@import "header-slick-override.scss";
+@import "blocks/arrow.scss";
 //@import "blocks/carousel.scss";
 @import "blocks/category.scss";
