path to bootstrap.scss in style.scss was changed

--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -3,12 +3,11 @@
 @import "mixins.scss";
 //@import "fonts.scss";
 @import "bootstrap-override";
-@import "./bootstrap/scss/bootstrap.scss";
+@import "bootstrap/scss/bootstrap.scss";
 @import "blocks/page-header.scss";
 @import "blocks/logo.scss";
 @import "blocks/menu.scss";
 @import "blocks/sample.scss";
 @import "header-slick-override.scss";
 @import "blocks/arrow.scss";
-//@import "blocks/carousel.scss";
 @import "blocks/category.scss";
