--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -3,7 +3,7 @@
 @import "mixins.scss";
 //@import "fonts.scss";
 @import "bootstrap-override";
-@import "bootstrap/scss/bootstrap.scss";
+//@import "bootstrap/scss/bootstrap.scss";
 @import "blocks/page-header.scss";
 @import "blocks/logo.scss";
 @import "blocks/menu.scss";
