test version of fixed header while scrolling was added

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -30,6 +30,12 @@ body {
   height: 140px;
   width: 100vw; }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #1b1e21; }
+
 .logo {
   display: flex;
   flex-direction: row;
