--- a/source/Sass/blocks/_page-header.scss
+++ b/source/Sass/blocks/_page-header.scss
@@ -6,11 +6,12 @@
   z-index: 10;
   height: 140px;
   width: 100vw;
+  transition: background 0.5s ease;
 }
 
 .sticky {
   position: fixed;
   top: 0;
-  width: 100%;
-  background-color: #1b1e21;
+  width: 100vw;
+  background-color: rgba(27, 30, 33, 0.95);
 }
