--- a/bootstrap/scss/_nav.scss
+++ b/bootstrap/scss/_nav.scss
@@ -38,26 +38,26 @@
 
   .nav-link {
     border: $nav-tabs-border-width solid transparent;
-    @include border-top-radius($nav-tabs-border-radius);
+    /*@include border-top-radius($nav-tabs-border-radius);
 
     @include hover-focus {
       border-color: $nav-tabs-link-hover-border-color;
-    }
+    }*/
 
     &.disabled {
-      color: $nav-link-disabled-color;
+      //color: $nav-link-disabled-color;
       background-color: transparent;
-      border-color: transparent;
+      border: none;
     }
   }
 
-  .nav-link.active,
+  /*.nav-link.active,
   .nav-item.show .nav-link {
     color: $nav-tabs-link-active-color;
     background-color: $nav-tabs-link-active-bg;
     border-color: $nav-tabs-link-active-border-color;
   }
-
+*/
   .dropdown-menu {
     // Make dropdown border overlap tab border
     margin-top: -$nav-tabs-border-width;
