--- a/source/Sass/_bootstrap-override.scss
+++ b/source/Sass/_bootstrap-override.scss
@@ -15,3 +15,26 @@
   position: relative;
   width: 100%;
 }
+
+.nav-tabs {
+  border: none;
+}
+
+.nav-tabs .nav-link {
+  border: none;
+}
+
+.nav-link {
+  border: none;
+  &:hover {
+    border: none;
+  }
+}
+
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  color: $menu-link-hover;
+  background-color: transparent;
+  border-color: transparent;
+}
+
