--- a/source/css/style.css
+++ b/source/css/style.css
@@ -21,6 +21,23 @@ body {
   position: relative;
   width: 100%; }
 
+.nav-tabs {
+  border: none; }
+
+.nav-tabs .nav-link {
+  border: none; }
+
+.nav-link {
+  border: none; }
+  .nav-link:hover {
+    border: none; }
+
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  color: #c7b299;
+  background-color: transparent;
+  border-color: transparent; }
+
 .page-header {
   position: absolute;
   display: flex;
