necessary scss files were added and imported to style.scss

--- a/source/Sass/style.scss
+++ b/source/Sass/style.scss
@@ -3,11 +3,28 @@
 @import "mixins.scss";
 //@import "fonts.scss";
 @import "bootstrap-override";
-//@import "bootstrap/scss/bootstrap.scss";
+@import "header-slick-override.scss";
 @import "blocks/page-header.scss";
 @import "blocks/logo.scss";
 @import "blocks/menu.scss";
 @import "blocks/sample.scss";
-@import "header-slick-override.scss";
 @import "blocks/arrow.scss";
+@import "blocks/features.scss";
+@import "blocks/advantage.scss";
+@import "blocks/slider.scss";
+@import "blocks/projects.scss";
 @import "blocks/category.scss";
+@import "blocks/promo.scss";
+@import "blocks/mobile.scss";
+@import "blocks/statistics.scss";
+@import "blocks/recent.scss";
+@import "blocks/post.scss";
+@import "blocks/clients.scss";
+@import "blocks/social.scss";
+@import "blocks/company.scss";
+@import "blocks/blog.scss";
+@import "blocks/twitter.scss";
+@import "blocks/widget.scss";
+@import "blocks/footer.scss";
+@import "blocks/copyright.scss";
+@import "blocks/design.scss";
