--- a/source/css/style.css
+++ b/source/css/style.css
@@ -38,6 +38,32 @@ body {
   background-color: transparent;
   border-color: transparent; }
 
+.slick-dots {
+  bottom: 25px; }
+
+.slick-dots li.slick-active button {
+  padding-bottom: 2px; }
+
+.slick-dots li button:before {
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  color: transparent;
+  opacity: 0.5; }
+
+.slick-dots li button:hover::before {
+  background-color: #c7b299; }
+
+.slick-dots li.slick-active button:before {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border: 2px solid #d3c1ad;
+  color: transparent;
+  background-color: transparent;
+  opacity: 1; }
+
 .page-header {
   position: absolute;
   display: flex;
@@ -138,32 +164,6 @@ body {
     cursor: pointer;
     text-decoration: none; }
 
-.slick-dots {
-  bottom: 25px; }
-
-.slick-dots li.slick-active button {
-  padding-bottom: 2px; }
-
-.slick-dots li button:before {
-  width: 11px;
-  height: 11px;
-  border-radius: 50%;
-  background-color: #ffffff;
-  color: transparent;
-  opacity: 0.5; }
-
-.slick-dots li button:hover::before {
-  background-color: #c7b299; }
-
-.slick-dots li.slick-active button:before {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  border: 2px solid #d3c1ad;
-  color: transparent;
-  background-color: transparent;
-  opacity: 1; }
-
 .arrow-prev {
   width: 40px;
   height: 73px;
@@ -201,3 +201,30 @@ body {
     .category__item:hover {
       border-radius: 3px;
       background-color: #998675; }
+
+.promo {
+  width: 100%;
+  max-width: 1920px;
+  padding-left: 0;
+  padding-right: 0;
+  background: url("/HTML5-JQuery-landing-demo/source/images/promo-img.jpg") no-repeat;
+  background-size: cover; }
+  .promo__wrapper {
+    background-color: rgba(17, 17, 17, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    padding: 210px 682px 207px 682px; }
+  .promo__button {
+    cursor: pointer; }
+  .promo__description-title {
+    color: #ffffff;
+    font-family: Raleway;
+    font-size: 30px;
+    font-weight: 500; }
+  .promo__description-text {
+    color: #ffffff;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.75; }
