--- a/source/Sass/blocks/_promo.scss
+++ b/source/Sass/blocks/_promo.scss
@@ -10,12 +10,18 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    padding: 210px 682px 207px 682px;
+    padding: 210px 682px 188px 682px;
   }
   &__button {
     cursor: pointer;
+    padding-top: 14px;
   }
-  &__description {}
+  &__description {
+    padding-top: 54px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
   &__description-title {
     color: $white;
     font-family: Raleway;
@@ -28,5 +34,14 @@
     font-size: 16px;
     font-weight: 300;
     line-height: 1.75;
+  }
+  &__time {
+    align-self: center;
+    padding-top: 16px;
+    color: $menu-link-hover;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.71;
   }
 }
