--- a/source/Sass/blocks/_promo.scss
+++ b/source/Sass/blocks/_promo.scss
@@ -1,6 +1,5 @@
 .promo {
   width: 100%;
-  max-width: 1920px;
   padding-left: 0;
   padding-right: 0;
   background: url("/HTML5-JQuery-landing-demo/source/images/promo-img.jpg") no-repeat;
@@ -10,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    padding: 210px 682px 188px 682px;
+    padding: 16% 28% 14%;
   }
   &__button {
     cursor: pointer;
