--- a/source/css/style.css
+++ b/source/css/style.css
@@ -191,6 +191,48 @@ body {
   .arrow-next:hover {
     fill: #d3c1ad; }
 
+.features {
+  display: flex;
+  justify-content: center; }
+  .features__wrapper {
+    max-width: 1170px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 5%;
+    padding-bottom: 15%; }
+
+.advantage {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  fill: #555555;
+  cursor: pointer; }
+  .advantage__img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 55px;
+    height: 55px; }
+  .advantage__title {
+    color: #555555;
+    font-family: Raleway;
+    font-size: 22px;
+    font-weight: 600;
+    padding-top: 12px; }
+  .advantage__text {
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.71;
+    text-align: center; }
+
+.advantage__img:hover .advantage__title:hover {
+  fill: #c7b299;
+  color: #c7b299; }
+
 .category {
   display: flex;
   justify-content: center; }
@@ -204,7 +246,6 @@ body {
 
 .promo {
   width: 100%;
-  max-width: 1920px;
   padding-left: 0;
   padding-right: 0;
   background: url("/HTML5-JQuery-landing-demo/source/images/promo-img.jpg") no-repeat;
@@ -214,7 +255,7 @@ body {
     display: flex;
     flex-direction: column;
     align-content: center;
-    padding: 210px 682px 188px 682px; }
+    padding: 16% 28% 14%; }
   .promo__button {
     cursor: pointer;
     padding-top: 14px; }
@@ -317,3 +358,16 @@ body {
       display: inline-block;
       vertical-align: middle;
       color: #ffffff; }
+
+.clients {
+  width: 100%;
+  max-width: 1920px;
+  display: flex;
+  justify-content: center;
+  background: url("/HTML5-JQuery-landing-demo/source/images/clients-bg.jpg") no-repeat;
+  background-size: cover; }
+  .clients__wrapper {
+    max-width: 1120px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; }
