--- a/source/Sass/blocks/_statistics.scss
+++ b/source/Sass/blocks/_statistics.scss
@@ -9,26 +9,38 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 70px;
+    padding-bottom: 95px;
   }
   &__item {
     display: flex;
     flex-direction: column;
     align-content: center;
+    padding-left: 35px;
+    padding-right: 35px;
   }
   &__item-img {}
   &__item-num {
     color: $white;
-    font-family: "Montserrat";
+    font-family: Montserrat;
     font-size: 48px;
     font-weight: 400;
     line-height: 0.75;
   }
   &__item-text {
     color: $menu-link-hover;
-    font-family: "Montserrat";
+    font-family: Montserrat;
     font-size: 14px;
     font-weight: 300;
     line-height: 1.43;
     text-transform: uppercase;
+    &:after {
+      content: url("/HTML5-JQuery-landing-demo/source/images/icon-line.svg");
+      width: 30px;
+      height: 2px;
+      display: inline-block;
+      vertical-align: middle;
+      color: $white;
+    }
   }
 }
