--- a/source/css/style.css
+++ b/source/css/style.css
@@ -448,13 +448,20 @@ body {
 
 .clients {
   width: 100%;
-  max-width: 1920px;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 0;
   display: flex;
   justify-content: center;
-  background: url("/HTML5-JQuery-landing-demo/source/images/clients-bg.jpg") no-repeat;
+  background: url("HTML5-JQuery-landing-demo/source/images/clients-bg.jpg");
+  background-repeat: no-repeat;
   background-size: cover; }
   .clients__wrapper {
-    max-width: 1120px;
+    background-color: rgba(17, 17, 17, 0.5);
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around; }
+    justify-content: space-between;
+    padding: 12% 8% 11% 6%; }
+  .clients__logo {
+    display: flex; }
