--- a/source/Sass/blocks/_projects.scss
+++ b/source/Sass/blocks/_projects.scss
@@ -66,6 +66,7 @@
   &__button {
     display: flex;
     justify-content: center;
+    padding-bottom: 80px;
   }
   &__button-link {
     box-shadow: inset 0 -3px 0 #736357;
