--- a/source/Sass/blocks/_advantage.scss
+++ b/source/Sass/blocks/_advantage.scss
@@ -26,6 +26,13 @@
     font-weight: 300;
     line-height: 1.71;
     text-align: center;
+    padding-bottom: 20px;
+  }
+  &:after {
+    content: '';
+    width: 70px;
+    height: 3px;
+    background-color: #f1eee9;
   }
 }
 
