--- a/source/Sass/blocks/_statistics.scss
+++ b/source/Sass/blocks/_statistics.scss
@@ -5,27 +5,33 @@
   display: flex;
   justify-content: center;
   &__wrapper {
-    max-width: 950px;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 70px;
-    padding-bottom: 95px;
+    padding: 70px 9% 59px 13%;
   }
   &__item {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     padding-left: 35px;
     padding-right: 35px;
+    &:after {
+      content: '';
+      width: 30px;
+      height: 2px;
+      background-color: $white;
+    }
   }
   &__item-img {}
   &__item-num {
     color: $white;
     font-family: Montserrat;
     font-size: 48px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 0.75;
+    padding-top: 28px;
   }
   &__item-text {
     color: $menu-link-hover;
@@ -34,13 +40,6 @@
     font-weight: 300;
     line-height: 1.43;
     text-transform: uppercase;
-    &:after {
-      content: url("/HTML5-JQuery-landing-demo/source/images/icon-line.svg");
-      width: 30px;
-      height: 2px;
-      display: inline-block;
-      vertical-align: middle;
-      color: $white;
-    }
+    padding-bottom: 7px;
   }
 }
