--- a/source/css/style.css
+++ b/source/css/style.css
@@ -426,38 +426,37 @@ body {
   display: flex;
   justify-content: center; }
   .statistics__wrapper {
-    max-width: 950px;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 70px;
-    padding-bottom: 95px; }
+    padding: 70px 9% 59px 13%; }
   .statistics__item {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     padding-left: 35px;
     padding-right: 35px; }
+    .statistics__item:after {
+      content: '';
+      width: 30px;
+      height: 2px;
+      background-color: #ffffff; }
   .statistics__item-num {
     color: #ffffff;
     font-family: Montserrat;
     font-size: 48px;
-    font-weight: 400;
-    line-height: 0.75; }
+    font-weight: 300;
+    line-height: 0.75;
+    padding-top: 28px; }
   .statistics__item-text {
     color: #c7b299;
     font-family: Montserrat;
     font-size: 14px;
     font-weight: 300;
     line-height: 1.43;
-    text-transform: uppercase; }
-    .statistics__item-text:after {
-      content: url("/HTML5-JQuery-landing-demo/source/images/icon-line.svg");
-      width: 30px;
-      height: 2px;
-      display: inline-block;
-      vertical-align: middle;
-      color: #ffffff; }
+    text-transform: uppercase;
+    padding-bottom: 7px; }
 
 .recent {
   display: flex;
