--- a/source/css/style.css
+++ b/source/css/style.css
@@ -277,10 +277,21 @@ body {
   flex-direction: column;
   align-content: center;
   background-color: #fbfaf8;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  cursor: pointer; }
+  .projects__item:hover {
+    background-color: #362f2d; }
+    .projects__item:hover > :first-child {
+      opacity: 0.3; }
+    .projects__item:hover > h3 {
+      color: #ffffff;
+      background-color: transparent; }
+    .projects__item:hover > p {
+      color: #c7b299;
+      background-color: transparent; }
 
 .projects__item-wrapper {
-  width: 370px;
+  width: 100%;
   height: 237px; }
 
 .projects__item-img {
