--- a/source/css/style.css
+++ b/source/css/style.css
@@ -241,6 +241,74 @@ body {
     .advantage:hover:after {
       background-color: #c7b299; }
 
+.slider__wrapper {
+  background-color: #fbfaf8; }
+
+.slider__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.slider__header-title {
+  color: #555555;
+  font-family: Raleway;
+  font-size: 30px;
+  font-weight: 400; }
+
+.slider__header-text {
+  color: #8c8c8c;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.75; }
+
+.slider__item-wrapper {
+  display: flex; }
+
+.slider__item {
+  width: 770px;
+  height: 400px; }
+  .slider__item:nth-child(2) {
+    height: 482px; }
+
+.slider__item-img {
+  width: 100%;
+  height: 100%; }
+
+.slider__footer {
+  background-image: linear-gradient(to right, #211b19 0%, #4e3427 100%);
+  display: flex; }
+
+.slider__footer-info {
+  display: flex;
+  flex-direction: column; }
+
+.slider__footer-titlw span {
+  color: #c7b299; }
+
+.slider__footer-title {
+  color: #ffffff;
+  font-family: Raleway;
+  font-size: 28px;
+  font-weight: 400; }
+
+.slider__footer-text {
+  color: #615855;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 300; }
+
+.slider__footer-link {
+  box-shadow: inset 0 -3px 0 #736357;
+  border-radius: 3px;
+  background-color: #998675;
+  color: #ffffff;
+  font-family: Raleway;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.64;
+  text-transform: uppercase; }
+
 .projects__header {
   display: flex;
   flex-direction: column;
