--- a/source/Sass/blocks/_promo.scss
+++ b/source/Sass/blocks/_promo.scss
@@ -14,6 +14,16 @@
   &__button {
     cursor: pointer;
     padding-top: 14px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #000000;
+    opacity: 0.2;
+    align-self: center;
+  }
+  &__button-img {
+    z-index: 5;
+    fill: $white;
   }
   &__description {
     padding-top: 54px;
