--- a/source/Sass/blocks/_twitter.scss
+++ b/source/Sass/blocks/_twitter.scss
@@ -1,6 +1,9 @@
 .twitter {
   width: 23%;
   padding-top: 40px;
+  & > div:last-of-type {
+    border: none;
+  }
   &__title {
     color: $white;
     font-family: Raleway;
@@ -14,6 +17,7 @@
     font-size: 14px;
     line-height: 1.43;
     padding-top: 9px;
+    border-bottom: 2px solid #252525;
   }
   &__post-text a {
     color: #00bff3;
