--- a/source/css/style.css
+++ b/source/css/style.css
@@ -447,7 +447,8 @@ body {
     opacity: 0.2;
     align-self: center; }
   .promo__button-img {
-    z-index: 5; }
+    z-index: 5;
+    fill: #ffffff; }
   .promo__description {
     padding-top: 54px;
     display: flex;
@@ -495,7 +496,8 @@ body {
     padding-top: 15px; }
   .mobile__list {
     padding-top: 15px;
-    padding-left: 100px; }
+    padding-left: 100px;
+    list-style: none; }
   .mobile__list-item {
     position: relative;
     color: #8c8c8c;
@@ -503,10 +505,13 @@ body {
     font-size: 16px;
     font-weight: 300;
     line-height: 2; }
-    .mobile__list-item:before {
-      content: url("/HTML5-JQuery-landing-demo/source/images/icon-list-dot.svg");
+    .mobile__list-item:after {
+      content: '';
+      background: url("/HTML5-JQuery-landing-demo/source/images/icon-list-dot.svg");
       position: absolute;
-      left: 10px; }
+      left: 10px;
+      width: 21px;
+      height: 21px; }
 
 .statistics {
   width: 100%;
@@ -661,16 +666,25 @@ body {
     line-height: 1.71;
     padding-top: 22px; }
   .company__button {
+    display: flex;
     color: #d1d1d1;
     font-family: Montserrat;
     font-size: 13px;
     font-weight: 600;
     line-height: 1.43;
-    padding-top: 24px; }
+    padding-top: 24px;
+    cursor: pointer; }
+  .company__button-arrow {
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    border-left-color: #d1d1d1; }
 
 .blog {
   width: 23%;
   padding-top: 40px; }
+  .blog > div:last-of-type {
+    border: none; }
   .blog__title {
     color: #ffffff;
     font-family: Raleway;
@@ -678,7 +692,13 @@ body {
     font-weight: 700; }
   .blog__item {
     font-family: Montserrat;
-    font-weight: 300; }
+    font-weight: 300;
+    border-bottom: 2px solid #252525;
+    cursor: pointer; }
+    .blog__item:hover > p:first-child {
+      color: #ffffff; }
+    .blog__item:hover > p {
+      color: #c7b299; }
   .blog__item-date {
     color: #363636;
     font-size: 12px;
@@ -692,6 +712,8 @@ body {
 .twitter {
   width: 23%;
   padding-top: 40px; }
+  .twitter > div:last-of-type {
+    border: none; }
   .twitter__title {
     color: #ffffff;
     font-family: Raleway;
@@ -703,7 +725,8 @@ body {
     font-weight: 300;
     font-size: 14px;
     line-height: 1.43;
-    padding-top: 9px; }
+    padding-top: 9px;
+    border-bottom: 2px solid #252525; }
   .twitter__post-text a {
     color: #00bff3;
     text-decoration: none; }
