--- a/source/css/style.css
+++ b/source/css/style.css
@@ -42,7 +42,7 @@ body {
   bottom: 25px; }
 
 .slick-dots li.slick-active button {
-  padding-bottom: 2px; }
+  padding-bottom: 0; }
 
 .slick-dots li button:before {
   width: 11px;
@@ -63,6 +63,10 @@ body {
   color: transparent;
   background-color: transparent;
   opacity: 1; }
+
+.slick-dots li button:hover::before,
+.slick-dots li button:focus::before {
+  opacity: 0.5; }
 
 .page-header {
   position: absolute;
@@ -678,7 +682,9 @@ body {
     width: 0;
     height: 0;
     border: 5px solid transparent;
-    border-left-color: #d1d1d1; }
+    border-left-color: #d1d1d1;
+    margin-top: 5px;
+    margin-left: 5px; }
 
 .blog {
   width: 23%;
